# hgit

./: README.md  hgit.cabal
app/: Main.hs
src/Data/Compress/: Compress.hs
src/Data/GitPath/: GitPath.hs
src/Data/Parser/: Number.hs
src/Data/Storage/: ObjectTypes.hs  Parser.hs
test/Data/Compress/: CompressSpec.hs
test/Data/Storage/: ParserSpec.hs
