name:                hgit
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/sbchaos/hgit#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          sandeep.bhardwaj2307@gmail.com
copyright:           2017 Sandeep
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Storage.Parser
                     , Data.Storage.ObjectTypes
                     , Data.Parser.Number
                     , Data.Compress.Compress
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , parsec
                     , zlib
  default-language:    Haskell2010

executable hgit
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hgit
  default-language:    Haskell2010

test-suite hgit-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hgit
                     , hspec
                     , parsec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sbchaos/hgit
